# resenhazord2

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .python-semantic-release.toml  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Dockerfile  Dockerfile.py  LICENSE  README.md  bandit.toml  codecov.yml  compose.core.yml  compose.edge.yml  deploy.sh  docker-compose.yml  eslint.config.js  index.js  index.ts  package.json  pyproject.toml  pyrightconfig.json  pytest.toml  ruff.toml  semantic-release.toml  setup.cfg  sonar-project.properties  startup.sh  tsconfig.json
.claude/: settings.json
.claude/commands/: check-py.md  check-ts.md  check.md  ci.md  code-quality.md  rules.md  run-local.md  test.md
.claude/hooks/: block-destructive.sh  format-python.sh  post-edit-verify.sh  stop-verify.sh  truncation-check.sh
.claude/rules/: git.md  python.md  testing.md  typescript.md
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/workflows/: build.yml  check.yml  deploy.yml  pipeline.yml  release.yml  test.yml
.husky/: pre-push
bot/: main.py  settings.py
bot/application/: agent_executor.py  agent_response.py  command_handler.py  command_registry.py  config_editor.py  config_service.py  message_preprocess.py  register_commands.py
bot/data/: agent_examples.py  agent_meta_tools.py  bicho.py  browser_headers.py  car.py  car_brands.py  config_defaults.py  country_flag.py  currency.py  ddd_list.py  deezer_genres.py  discord.py  download_errors.py  drive.py  football.py  football_formations.py  football_league_priority.py  football_team_prefixes.py  football_zones.py  game_info.py  hentai_gallery.py  horoscope.py  jackpot.py  languages.py  league_of_legends.py  mateus.py  meal_categories.py  menu_messages.py  moon.py  mtg_symbols.py  music_errors.py  music_player.py  my_anime_list.py  nationality_flags.py  number_emoji.py  pokemon_type_emojis.py  roman_numerals.py  rule34.py  sentry_noise.py  swearings.py  (+5 more)
bot/domain/: constants.py  exceptions.py  jid.py
bot/infrastructure/: broker.py  cached_config_store.py  config_store.py  config_tables.py  database.py  http_client.py  logging.py  models.py  mongodb.py  opgg_client.py  restcountries_client.py  sentry.py
bot/ports/: agent_orchestrator_port.py  broker_port.py  config_store_port.py  discord_port.py  example_retriever_port.py  llm_provider_port.py  telegram_port.py
docs/: api-integration.md  architecture.md  git-flow.md  llm-agent-plan.md  logging.md  migration-plan.md  prd-agentic-command-mapping.md  prd-event-driven-gateway.md  prd-per-group-config.md  response-conventions.md  security.md  sentry.md
docs/adr/: 0001-at-least-once-delivery.md  0002-two-node-topology.md  0003-wa-rpc-queue.md  0004-ack-retry-dlq.md  0005-brokerport-two-layer-testing.md  0006-two-node-cicd-deploy.md  0007-agent-frameworks-behind-ports.md  0008-conversation-state-and-resume.md  0009-confidence-gated-execution.md  0010-rag-few-shot-retrieval.md  0011-agent-port-testing.md  0012-relational-config-store.md
engine/: .dockerignore  Dockerfile  pyproject.toml  ruff.toml
engine/bot/: main.py  settings.py
engine/tests/: conftest.py
gateway/: .dockerignore  .prettierignore  Dockerfile  bunfig.toml  index.ts  package.json  prettier.config.js  vitest.config.ts
gateway/.husky/: pre-push
gateway/patches/: @whiskeysockets%2Fbaileys@7.0.0-rc13.patch
gateway/tests/: setup.ts
migrations/: env.py
migrations/versions/: 21e07392eca2_create_chat_and_command_override_tables.py  7d43b3f38738_create_chat_and_command_override_tables.py
public/messages/: menu_biblia_message.js  menu_grupo_message.js  menu_message.js
scripts/: check_dep_cooldown.py  deploy.sh  index_examples.py  release.sh  seed_config.py  test_time.py
src/adapters/: BaileysAdapter.ts
src/auth/: CreateAuthState.js  CreateAuthState.ts  MongoDBAuthState.js  MongoDBAuthState.ts  google_secrect.json.example
src/builders/: Reply.ts
src/cache/: FallbackGroupMetadataCache.ts
src/clients/: DataDragonService.ts  DiscordService.ts
src/commands/: AddCommand.js  AddCommand.ts  AdmCommand.js  AdmCommand.ts  AlcoranCommand.ts  AllCommand.js  AllCommand.ts  AnimalCommand.ts  AnimeCommand.js  AudioCommand.js  AudioCommand.ts  BanCommand.js  BanCommand.ts  BaralhoCommand.js  BaralhoCommand.ts  BeerCommand.ts  BibliaCommand.js  BibliaCommand.ts  BichoCommand.ts  BorgesCommand.js  BorgesCommand.ts  CardBoosterCommand.ts  CarroCommand.ts  ClashRoyaleCommand.ts  Command.ts  CountryFlagCommand.ts  D20Command.js  D20Command.ts  DownloadCommand.ts  DriveCommand.js  DriveCommand.ts  ExtrairCommand.ts  FatoCommand.js  FatoCommand.ts  FilmeSerieCommand.js  FilmeSerieCommand.ts  FuckCommand.js  FuckCommand.ts  GameCommand.ts  GroupMentionsCommand.js  (+45 more)
src/data/: animalEmojis.ts  animalWikipediaTitles.ts  bichoDraws.ts  carBrands.ts  dddList.ts  deezerGenres.ts  musicGenres.ts  nsfwTags.ts  pokemonTypeEmojis.ts  romanNumerals.ts  swearings.ts
src/events/: ConnectionUpdate.js  ConnectionUpdate.ts  ConnectionUpdateEvent.js  ConnectionUpdateEvent.ts  GroupParticipantsUpdateEvent.js  GroupParticipantsUpdateEvent.ts  MessageEvent.js  MessageUpsert.js  MessageUpsert.ts  MessageUpsertEvent.js  MessageUpsertEvent.ts
src/factories/: CommandFactory.ts
src/handlers/: CommandHandler.js  CommandHandler.ts
src/infra/: AxiosClient.ts  CreateClient.js  CreateQRCode.js  CreateSock.js  CreateSock.ts  CreateSocket.js  CreateSocket.ts  Sentry.ts
src/models/: Resenhazord2.js  Resenhazord2.ts
src/parsers/: CommandParser.ts
src/ports/: WhatsAppPort.ts
src/scrapers/: HentaiScraper.ts  OpenFoodFactsScraper.ts
src/scripts/: clean_session.js  clean_session.ts  diagnostic.js  diagnostic.ts
src/services/: BichoScraper.ts  CardGridBuilder.ts  DataDragonService.ts  GroupMentionsService.ts  OpenFoodFactsScraper.ts  StealGroupService.js  StealGroupService.ts  XVideosScraper.ts  YtDlpService.ts
src/types/: commandConfig.ts  message.d.ts  modules.d.ts
tests/: conftest.py  setup.ts
(+628 files in other folders)
