[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resenhazord2-core"
version = "2.3.1"
description = "Python core for Resenhazord2 WhatsApp bot"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "httpx>=0.28.0",
    "httpx-retries>=0.4.0",
    "motor>=3.7.0",
    "beanie>=1.27.0",
    "structlog>=25.1.0",
    "sentry-sdk[fastapi]>=2.19.0",
    "pillow>=11.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "redis>=5.2.0",
    "beautifulsoup4>=4.14.3",
    "yt-dlp>=2025.1.0",
    "discord-py>=2.4.0",
    "pynacl>=1.6.2",
    "python-telegram-bot>=21.0",
    "mcp>=1.0.0",
    "aio-pika>=9.6.2",
    "upstash-vector>=0.8.0",
    "langchain-openai>=1.3.2",
    "langchain-groq>=1.1.3",
    "langchain-mistralai>=1.1.5",
    "langgraph>=1.2.5",
    "langgraph-checkpoint-redis>=0.4.1",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "anyio[trio]>=4.8.0",
    "pytest-anyio>=0.0.0",
    "respx>=0.22.0",
    "factory-boy>=3.3.0",
    "faker>=30.0.0",
    "fakeredis>=2.26.0",
    "zuban>=0.7.0",
    "bandit[toml]>=1.8.0",
    "pre-commit>=4.0.0",
    "greenlet>=3.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.0",
    "radon>=6.0",
    "xenon>=0.9",
    "taskipy>=1.14.0",
    "commitizen>=4.0.0",
    "mutmut>=3.5.0",
    "testcontainers[rabbitmq]>=4.14.2",
]

[tool.taskipy.tasks]
test = "pytest"
"test:py" = "pytest -v"
"test:ts" = "cd gateway && bun run test:run"
lint = "ruff check ."
"lint:fix" = "ruff check . --fix"
format = "ruff format ."
"format:check" = "ruff format --check ."
typecheck = "zuban check"
complexity = "xenon --max-absolute B --max-average B bot/"
"check:py" = "task lint && task format:check && task typecheck && task complexity"
"check:ts" = "cd gateway && bun lint && bun typecheck && bun format:check"
release = "bash scripts/release.sh"
log = "docker compose up --build -d && docker compose logs -f --no-color --tail=0 2>&1 | tee -a docker.log"
logrotate = "docker compose logs --no-color --tail=0 > /dev/null && truncate -s 0 docker.log 2>/dev/null; echo 'docker.log truncated'"
mutate = "mutmut run"
"mutate:results" = "mutmut results"
"test:external" = "pytest -m external"
"index:examples" = "python scripts/index_examples.py"
"db:upgrade" = "alembic upgrade head"
"cooldown:check" = "python scripts/check_dep_cooldown.py"


[tool.zuban]
exclude = ["tests/"]

[tool.commitizen]
name = "cz_customize"
version = "2.3.1"
tag_format = "v$version"
version_files = ["pyproject.toml:version"]
changelog_file = "CHANGELOG.md"
update_changelog_on_bump = true

[tool.commitizen.customize]
# Pin the major at 2 — the product is "resenhazord2", its second version.
# cz_customize replicates cz_conventional_commits, with one deviation:
# breaking-change triggers (`!` and `BREAKING CHANGE`) map to MINOR instead of
# MAJOR in bump_map, so `cz bump` never crosses into 3.x. A real major bump, if
# ever wanted, is a deliberate `cz bump --increment MAJOR`.
#
# commit_parser / changelog_pattern / change_type_map mirror conventional
# verbatim — cz_customize does NOT inherit them, so the grouped changelog
# (### Feat / ### Fix …) only renders when they are restated here.
bump_map = { '^.+!$' = "MINOR", '^BREAKING[\-\ ]CHANGE' = "MINOR", '^feat' = "MINOR", '^fix' = "PATCH", '^refactor' = "PATCH", '^perf' = "PATCH" }
commit_parser = '^((?P<change_type>feat|fix|refactor|perf|BREAKING CHANGE)(?:\((?P<scope>[^()\r\n]*)\)|\()?(?P<breaking>!)?|\w+!):\s(?P<message>.*)?'
changelog_pattern = '^((BREAKING[\-\ ]CHANGE|\w+)(\(.+\))?!?):'
change_type_map = { feat = "Feat", fix = "Fix", refactor = "Refactor", perf = "Perf" }

[tool.hatch.build.targets.wheel]
packages = ["bot"]

